files/Kubernetes/basic-application/networking.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
  labels:
    app: code-server
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: code-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: code-server
  labels:
    app: code-server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "code.kywa.io"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: code-server
              port:
                number: 8080
  tls:
  - hosts:
    - kywa.kywa.io
